--- a/style/index.css
+++ b/style/index.css
@@ -1,13 +1,3 @@
-/* General properties */
-* {
-    font-size: 15px;
-}
-body {
-    height: 100vh;
-    background: linear-gradient(
-        rgb(21, 149, 136) 20%, rgb(218, 219, 215) 20%);
-}
-
 /* color properties */
 .base_color {
     background-color: rgb(234, 234, 234);
@@ -21,19 +11,33 @@ body {
 .color_gray {
     color: rgb(120, 120, 120)
 }
+.hover_gray:hover {
+    background-color: rgb( 235, 235, 235);
+}
 
-/* Sizing properties */
-.rounded_border {
-    border-radius: 50%;
+/* Font properties */
+* {
+    font-size: 15px;
 }
 .font_small {
     font-size: 12px;
 }
-.h90 {
-    height: 90vh;
+  
+/* Body e contenitore properties */
+body {
+    height: 100vh;
+    background: linear-gradient(rgb(21, 149, 136) 20%, rgb(218, 219, 215) 20%);
+}
+.contenitore {
+    height: 580px;
+    width: 80vw;
+    max-width: 1100px;
 }
 
 /*User_option properties*/
+.user_option {
+    height: 70px;
+}
 .user_img {
     height: 50px;
 }
@@ -43,12 +47,18 @@ body {
 }
 
 /* Notification properties */
+.notification {
+    height: calc(100% - 510px);
+}
 .notification i {
     color: rgb(145, 218, 250);
     font-size: 20px;
 }
 
 /* Search properties */
+.search {
+    height: 40px;
+}
 .search i {
     color: rgb(177, 177, 177);
     font-size: 15px;
@@ -59,7 +69,9 @@ body {
 }
 
 /* Contacts styling */
-
+.contacts {
+    height: 400px;
+}
 
 
 
@@ -76,3 +88,9 @@ body {
 .blue {
     background-color: blue;
 }
+.green {
+    background-color: green;
+}
+
+
+
